--- a/documentation/MSIE Cache File (index.dat) format.asciidoc
+++ b/documentation/MSIE Cache File (index.dat) format.asciidoc
@@ -1,6 +1,11 @@
 = MSIE Cache File (index.dat) format specification
 Analysis of the index.dat file format
 
+:toc:
+:toc-placement: manual
+:toc-title: 
+:toclevels: 4
+
 :numbered!:
 [abstract]
 == Summary
@@ -34,6 +39,10 @@ published by the Free Software Foundation; with no Invariant Sections, no
 Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included 
 in the section entitled "GNU Free Documentation License".
 ....
+
+[preface]
+== Table of contents
+toc::[]
 
 [preface]
 == Revision history
