--- a/ChangeLog
+++ b/ChangeLog
@@ -33,6 +33,9 @@ In progress:
 * record scan
   - flag entries in hash table as hashed
 
+20150726
+* worked on tests
+
 20150725
 * worked on setup.py
 
