Worked on tests.

--- a/manuals/libmsiecf.3
+++ b/manuals/libmsiecf.3
@@ -1,9 +1,9 @@
-.Dd January  6, 2015
+.Dd April 21, 2016
 .Dt libmsiecf 3
 .Os libmsiecf
 .Sh NAME
 .Nm libmsiecf.h
-.Nd Library to access the MSIE Cache File (index.dat) format.
+.Nd Library to access the MSIE Cache File (index.dat) format
 .Sh LIBRARY
 .Lb libmsiecf
 .Sh SYNOPSIS
@@ -195,6 +195,7 @@ For the actual return values see "libmsiecf.h".
 None
 .Sh FILES
 None
+.Sh NOTES
 libmsiecf allows to be compiled with wide character support (wchar_t).
 
 To compile libmsiecf with wide character support use:
