Worked on Python bindings

--- a/ChangeLog
+++ b/ChangeLog
@@ -33,83 +33,8 @@ In progress:
 * record scan
   - flag entries in hash table as hashed
 
-20160126
-* worked on tests
-* applied updates
-
-20160109
-* fixes for rpmbuild
-
-20160107
-* worked on Python 3 support
-* 2016 update
-
-20151220
-* changes for deployment
-* updated dependencies
-
-20151205
-* worked on Python bindings
-
-20150726
-* worked on tests
-
-20150725
-* worked on setup.py
-
-20150708
-* worked on check signature
-
-20150314
-* updated version
-
-20150313
-* worked on Python bindings cache directory support
-
-20150308
-* worked on Python bindings cache directory support
-
-20150106
-* 2015 update
-
-20141222
-* worked on Python 3 support
-* worked on tests
-
-20141130
-* code clean up
-
-20141118
-* code clean up
-
-20141025
-* changes for deployment
-
-20141024
-* changes for deployment
-* changes for project site move
-
-20141019
-* changes for deployment
-
-20141004
-* bug fix in Python-bindings
-* update Python-bindings tests
-
-20140930
-* removed README.macosx
-* changes for project site move
-
-20140731
-* bug fix in Python-bindings
-
-20140723
-* worked on dpkg debug packages support
-
-20140323
-* worked on Python bindings
-
 20140317
+* see `git log' for more recent change log
 * worked on setup.py
 
 20140131
