--- a/manuals/libmsiecf.3
+++ b/manuals/libmsiecf.3
@@ -77,7 +77,7 @@ File functions
 .Ft int
 .Fn libmsiecf_file_get_number_of_cache_directories "libmsiecf_file_t *file, int *number_of_cache_directories, libmsiecf_error_t **error"
 .Ft int
-.Fn libmsiecf_file_get_cache_directory_name "libmsiecf_file_t *file, int cache_directory_index, char *cache_directory_name, size_t cache_directory_name_size, libmsiecf_error_t **error"
+.Fn libmsiecf_file_get_cache_directory_name "libmsiecf_file_t *file, int cache_directory_index, char *string, size_t string_size, libmsiecf_error_t **error"
 .Ft int
 .Fn libmsiecf_file_get_number_of_items "libmsiecf_file_t *file, int *number_of_items, libmsiecf_error_t **error"
 .Ft int
