Worked on Python bindings

--- a/manuals/libmsiecf.3
+++ b/manuals/libmsiecf.3
@@ -117,7 +117,7 @@ URL item functions
 .Ft int
 .Fn libmsiecf_url_get_expiration_time "libmsiecf_item_t *url, uint64_t *expiration_time, libmsiecf_error_t **error"
 .Ft int
-.Fn libmsiecf_url_get_last_checked_time "libmsiecf_item_t *url, uint32_t *last_checked_time, libmsiecf_error_t **error"
+.Fn libmsiecf_url_get_last_checked_time "libmsiecf_item_t *url, uint32_t *fat_date_time, libmsiecf_error_t **error"
 .Ft int
 .Fn libmsiecf_url_get_cached_file_size "libmsiecf_item_t *url, uint64_t *cached_file_size, libmsiecf_error_t **error"
 .Ft int
